src/App.css
body {
    margin: 0px;
    background-color: pink;
}

.App {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    flex-direction: column;
}

.Day {
    width: 500px;
    margin: 0.5rem;
    overflow: hidden;
    border-radius: 0.5rem;
    background-color: #bbbbbb;
}

.TitleDay {
    background-color: #888888;
    display: flex;
    justify-content: space-around;
    flex-direction: row;
}

.Result {
    display: flex;
    padding-right: 1rem;
    justify-content: space-between;
    flex-direction: row;
}

